# celery-yaml

./: .gitignore  CHANGELOG.md  Justfile  README.md  pyproject.toml
.github/workflows/: build-artifacts.yml  main.yml  publish-pypi.yml  release.yml  tests-artifacts.yml  tests.yml
demo/pyramid-app/: README.md  development.yaml  pyproject.toml
demo/pyramid-app/pyramid_app/: tasks.py  wsgi.py
demo/pyramid-app/tests/: test_pyramid_app.py
demo/pyramid-app5/: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
demo/pyramid-app5/pyramid_app/: backend.py
examples/pyramid-app/: Dockerfile  development.yaml  docker-compose.yaml  pyproject.toml
examples/pyramid-app/pyramid_app/: backend.py  wsgi.py
examples/pyramid-app5/pyramid_app/: tasks.py
scripts/: get_version.py  write_changelog.py
src/celery_yaml/: __init__.py  loader.py  pyramid.py
tests/: config-celerybeat.yaml  config-envsub.yaml  config-no-broker.yaml  config.yaml  conftest.py  test_celery_loader.py  test_pyramid.py
tests/dummy_packages/app1/: setup.py
tests/dummy_packages/app1/app1/: __init__.py
tests/dummy_packages/app1/app1.egg-info/: entry_points.txt
