[tool.poetry]
name = "celery-yaml"
version = "2.0.0"
description = "Easy configuration for celery app using Yaml file"
readme = "README.md"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
include = ["CHANGELOG.md"]
license = "BSD-derived"
packages = [
    { include = "celery_yaml", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.4.0"
pyramid = { version = ">=1.9", optional = true }
plaster-yaml = { version = "^2.0", optional = true }
PyYAML = "^6.0"

[tool.poetry.extras]
pyramid = ["pyramid", "plaster-yaml"]

[tool.poetry.group.dev.dependencies]
black = "^22"
celery = "^5.2.0"
coverage = {version = "^6.2", extras = ["toml"]}
isort = "^5.8.0"
flake8 = "^5"
mypy = "^0.991"
pytest = "^7"
pytest-cov = "^4.0.0"
pyramid-helloworld = { version = "^1.0.0", extras = ["celery"] }
types-pyyaml = "^6.0.12.3"
types-setuptools = "^65.7.0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "celery_yaml.*"
disallow_any_generics = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "except ImportError:",
  "except pkg_resources.DistributionNotFound:",
  "\\s+\\.\\.\\.$",
  "# coverage-ignore",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
