[tool.poetry]
name = "pyramid-app"
version = "0.1.0"
description = "Pyramid and Celery using Yaml Configuration Demo"
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5"
celery-yaml = { version = "^2.0.0", extras = ["pyramid"] }
pyramid = { version = ">=1.9", optional = true}
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8"

[tool.poetry.plugins."paste.app_factory"]
main = "pyramid_app.wsgi:main"

[tool.poetry.plugins."celery_yaml.app"]
main = "pyramid_app.backend:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
